--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,19 +13,19 @@
 #    See the License for the specific language governing permissions and
 #    limitations under the License.
 #
-# Spring BootÌá¹©ÁËËùÓĞÄ¬ÈÏÉèÖÃ http://blog.csdn.net/xiaoyu411502/article/details/48049099
+# Spring Bootæä¾›äº†æ‰€æœ‰é»˜è®¤è®¾ç½® http://blog.csdn.net/xiaoyu411502/article/details/48049099
 
 
 spring.datasource.schema=classpath:import.sql
 mybatis.config-location=classpath:mybatis-config.xml
-#logging.level.root=WARN #ÈÕÖ¾Ö»Êä³öwarn¼°ÒÔÉÏ¼¶±ğµÄĞÅÏ¢
+#logging.level.root=WARN #æ—¥å¿—åªè¾“å‡ºwarnåŠä»¥ä¸Šçº§åˆ«çš„ä¿¡æ¯
 logging.level.mybatis.mapper=TRACE
 
 # DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
-# Êı¾İ¿âÖĞµÄÄ¬ÈÏÖµÊÇH2£¬ÎÒÃÇÀ´¸Ä±äÁ¬½ÓÊôĞÔ£¬Á´½Óµ½MySqlÊı¾İ¿â
-spring.datasource.url=jdbc:mysql://120.78.191.67:3306/test?autoReconnect=true&useSSL=false
+# æ•°æ®åº“ä¸­çš„é»˜è®¤å€¼æ˜¯H2ï¼Œæˆ‘ä»¬æ¥æ”¹å˜è¿æ¥å±æ€§ï¼Œé“¾æ¥åˆ°MySqlæ•°æ®åº“
+spring.datasource.url=jdbc:mysql://localhost:3306/test?autoReconnect=true&useSSL=false
 spring.datasource.username=test
-spring.datasource.password=123456Test@
+spring.datasource.password=xxx
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 
