--- a/build.gradle
+++ b/build.gradle
@@ -29,4 +29,5 @@ dependencies {
     testCompile('org.springframework.boot:spring-boot-starter-test')
     compile("org.mybatis.spring.boot:mybatis-spring-boot-starter:1.3.1")
     compile 'mysql:mysql-connector-java'
+    compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.7'
 }
