模板生成的代码

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,6 +24,8 @@ logging.level.mybatis.mapper=TRACE
 
 # DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
 # 数据库中的默认值是H2，我们来改变连接属性，链接到MySql数据库
+# MySql 授权，家里：GRANT ALL PRIVILEGES ON test.* TO 'test'@'27.42.110.184' IDENTIFIED BY '123456Test@' WITH GRANT OPTION;
+# MySql 授权，公司：GRANT ALL PRIVILEGES ON test.* TO 'test'@'27.42.110.184' IDENTIFIED BY '123456Test@' WITH GRANT OPTION;
 spring.datasource.url=jdbc:mysql://120.78.191.67:3306/test?autoReconnect=true&useSSL=false
 spring.datasource.username=test
 spring.datasource.password=123456Test@
