spring-security-oauth2

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,11 +21,13 @@ mybatis.config-location=classpath:mybatis-config.xml
 mybatis.mapperLocations: classpath:/mybatis/mapper/*.xml
 #logging.level.root=WARN #日志只输出warn及以上级别的信息
 logging.level.mybatis.mapper=TRACE
+# https://docs.spring.io/spring-boot/docs/1.5.10.RELEASE/reference/htmlsingle/#boot-features-security
+# logging.level.org.springframework.security: INFO
 
 # DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
 # 数据库中的默认值是H2，我们来改变连接属性，链接到MySql数据库
 # MySql 授权，家里：GRANT ALL PRIVILEGES ON test.* TO 'test'@'27.42.110.184' IDENTIFIED BY '123456Test@' WITH GRANT OPTION;
-# MySql 授权，公司：GRANT ALL PRIVILEGES ON test.* TO 'test'@'27.42.110.184' IDENTIFIED BY '123456Test@' WITH GRANT OPTION;
+# MySql 授权，公司：GRANT ALL PRIVILEGES ON test.* TO 'test'@'59.38.45.29' IDENTIFIED BY '123456Test@' WITH GRANT OPTION;
 spring.datasource.url=jdbc:mysql://120.78.191.67:3306/test?autoReconnect=true&useSSL=false
 spring.datasource.username=test
 spring.datasource.password=123456Test@
@@ -35,3 +37,11 @@ spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 # EMBEDDED SERVER CONFIGURATION (ServerProperties)
 server.port=8081
+
+# Spring Security OAuth 2
+security.user.name=greg
+security.user.password=turnquist
+security.oauth2.client.client-id=foo
+security.oauth2.client.client-secret=bar
+security.oauth2.authorization.checkTokenAccess=isAuthenticated()
+logging.level.org.springframework.security=DEBUG
