--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,8 @@ targetCompatibility = 1.8
 
 dependencies {
     compile("org.springframework.boot:spring-boot-starter-web")
+    compile("org.springframework.boot:spring-boot-starter-security")
+    compile("org.springframework.security.oauth:spring-security-oauth2")
     testCompile('org.springframework.boot:spring-boot-starter-test')
     compile("org.mybatis.spring.boot:mybatis-spring-boot-starter:1.3.1")
     compile 'mysql:mysql-connector-java'
